# simple-Auto-Job-Form-Filler-Agent

./: Agent.md  README.md  app.py  google_form_handler.py  pyproject.toml  rag_workflow_with_human_feedback.py  requirements.txt  resume_processor.py  skill.md
assets/: resume-01.txt
