[project]
name = "simple-auto-job-form-filler-agent"
version = "0.1.0"
description = "AI 自动填求职申请表工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "seleniumbase>=4.24.0",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = []
